--- a/index.html
+++ b/index.html
@@ -12,6 +12,23 @@
 </head>
 
 <body>
+    <header>
+        <div class="begin">
+             <div class="lambda">
+                 <img src="file:///C:/Users/Tony%20Yang/Desktop/Git/web-Sprint-Challenge-User-Interface-and-Git/img/lambda-black.png"/>
+             </div>
+             <div class="topnav">
+               <a href="file:///C:/Users/Tony%20Yang/Desktop/Git/web-Sprint-Challenge-User-Interface-and-Git/index.html">Home</a>
+               <a href="file:///C:/Users/Tony%20Yang/Desktop/Git/web-Sprint-Challenge-User-Interface-and-Git/about.html">About</a>
+               <a href="#">Products</a>
+               <a href="#">Blog</a>
+               <a href="#">Contact</a>
+             </div>
+          </div>
+    </header>
+    <div class="topimg">
+            <img src="file:///C:/Users/Tony%20Yang/Desktop/Git/web-Sprint-Challenge-User-Interface-and-Git/img/jumbo.jpg"/>
+        </div>
     <div class="container">
    
         <section class="top-content">
@@ -30,16 +47,16 @@
             <h2>Why Did It Have To Be Boxes...</h2>
             
             <div class="boxes">
-                <div class="box">Box 1</div>
-                <div class="box">Box 2</div>
-                <div class="box">Box 3</div>
-                <div class="box">Box 4</div>
-                <div class="box">Box 5</div>
-                <div class="box">Box 6</div>
-                <div class="box">Box 7</div>
-                <div class="box">Box 8</div>
-                <div class="box">Box 9</div>
-                <div class="box">Box 10</div>
+                <div class="box" style="background-color: teal;">Box 1</div>
+                <div class="box" style="background-color: gold;">Box 2</div>
+                <div class="box" style="background-color: cadetblue;">Box 3</div>
+                <div class="box" style="background-color: coral;">Box 4</div>
+                <div class="box" style="background-color: crimson;">Box 5</div>
+                <div class="box" style="background-color: forestgreen;"> Box 6</div>
+                <div class="box" style="background-color: darkorchid;">Box 7</div>
+                <div class="box" style="background-color: hotpink;">Box 8</div>
+                <div class="box" style="background-color: indigo;">Box 9</div>
+                <div class="box" style="background-color: dodgerblue;">Box 10</div>
             </div>
         
         </section>
