--- a/about.html
+++ b/about.html
@@ -95,7 +95,7 @@
       <footer>
         <nav>
           <a href="index.html">Home</a>
-          <a href="file:///C:/Users/Tony%20Yang/Desktop/Git/web-Sprint-Challenge-User-Interface-and-Git/about.html">About</a>
+file:///C:/Users/Tony%20Yang/Desktop/Git/web-Sprint-Challenge-User-Interface-and-Git/about.html          <a href="">About</a>
           <a href="#">Products</a>
           <a href="#">Blog</a>
           <a href="#">Contact</a>
