--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
         
         <footer>
             <nav>
-                <a href="#">Home</a>
-                <a href="#">About</a>
+                <a href="index.html">Home</a>
+                <a href="file:///C:/Users/Tony%20Yang/Desktop/Git/web-Sprint-Challenge-User-Interface-and-Git/about.html">About</a>
                 <a href="#">Products</a>
                 <a href="#">Blog</a>
                 <a href="#">Contact</a>
